--- a/Index.html
+++ b/Index.html
@@ -26,15 +26,15 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="#">Caps</a>
+                        <a class="nav-link" href="#caps">Caps</a>
                         <a class="nav-link" href="#">Backpack</a>
-                        <a class="nav-link" href="#">Watch</a>
+                        <a class="nav-link" href="#">Watches</a>
                         <a class="nav-link" href="#">Contact Us</a>
                     </div>
                 </div>
             </nav>
         </div>
-        
+
         <div class="container">
             <div id="carouselExampleControls" class="carousel slide header-bg" data-ride="carousel">
                 <div class="carousel-inner">
@@ -49,7 +49,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur!lorem5
                                 </p>
                                 <h3 class="price">$ 240</h3>
-                                <button class="btn btn-success active font-weight-bold">Buy Now >></button>
+                                <button class="btn btn-success active font-weight-bold">Buy Now>></button>
 
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                     ipsum dolor sit amet.
                                 </p>
                                 <h3 class="price">$ 95</h3>
-                                <button class="btn btn-success active font-weight-bold">Buy Now >></button>
+                                <button class="btn btn-success active font-weight-bold">Buy Now>></button>
 
                             </div>
 
@@ -106,7 +106,84 @@
             </div>
         </div>
 
+        <div class="container categories">
+            <div class="row p-3 d-flex justify-content-between">
+                <div style="background-color: rgb(218, 146, 218);"
+                    class="col-md-4 d-flex justify-content-around align-items-center cat1">
+                    <h3 class="font-weight-bold">Caps</h3>
+                    <img src="Category images/cap.png" alt="cap">
+                </div>
+
+                <div style="background-color: lightcoral;"
+                    class="col-md-4 d-flex justify-content-around align-items-center cat2">
+                    <h3 class="font-weight-bold ">Bags</h3>
+                    <img src="Category images/backpack.png" alt="Backpack">
+                </div>
+
+                <div style="background-color: lightblue" ;
+                    class="col-md-4 d-flex justify-content-around align-items-center cat3">
+                    <h3 class="ml-3 font-weight-bold">Watch</h3>
+                    <img src="Category images/watch.png" alt="watch">
+                </div>
+            </div>
+        </div>
+
     </header>
+
+
+    <main>
+        <div class="container" id="caps">
+            <h2>Caps </h2>
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="caps/cap1.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Wide blast</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam provident,
+                            sapiente temporibus architecto nisi repudiandae!</p>
+                        <h5>$ 40</h5>
+                        <button class="btn btn-success active font-weight-bold">Buy Now>></button>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="caps/cap2.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Blue blast</h5>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, quibusdam.
+                        </p>
+                        <h5>$ 36</h5>
+                        <button class="btn btn-success active font-weight-bold">Buy Now>></button>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="caps/cap3.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Black nike</h5>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium et
+                            saepe sapiente minima!</p>
+                        <h5>$ 48</h5>
+                        <button class="btn btn-success active font-weight-bold">Buy Now>></button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container footer d-flex align-items-center justify-content-center text-center">
+            <div class="align-items-center">
+                <h3>KEEP SHOPPING FROM THIS SHOP</h3>
+                <H6>Get updates on sales and attactive discount </H6>
+                <input type="text" class="form-control" name="" id="">
+                <button class="btn btn-success active font-weight-bold" type="submit">SUBMIT</button>
+
+            </div>
+
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
