--- a/index.html
+++ b/index.html
@@ -174,16 +174,19 @@
 
     <footer>
         <div class="container footer d-flex align-items-center justify-content-center text-center">
-            <div class="align-items-center">
+            <div class="align-items-center ">
                 <h3>KEEP SHOPPING FROM THIS SHOP</h3>
                 <H6>Get updates on sales and attactive discount </H6>
                 <input type="text" class="form-control" name="" id="">
                 <button class="btn btn-success active font-weight-bold" type="submit">SUBMIT</button>
 
             </div>
-
+        </div>
+        <div class="text-center">
+            <small>@all right reserved to D-Mart</small>
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
