--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="carousel-item active">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <img src="/Banner image/headphone.jpg" class="d-block w-100" alt="headphone">
+                                <img src="/Banner image/headphone.png" class="d-block w-100" alt="headphone">
                             </div>
 
                             <div class="col-md-7">
