--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </nav>
         </div>
 
+        <!-- carousel container for big items -->
+
         <div class="container">
             <div id="carouselExampleControls" class="carousel slide header-bg" data-ride="carousel">
                 <div class="carousel-inner">
@@ -105,6 +107,8 @@
 
             </div>
         </div>
+
+        <!-- Caps Card -->
 
         <div class="container categories">
             <div class="row p-3 d-flex justify-content-between">
