--- a/index.html
+++ b/index.html
@@ -14,126 +14,136 @@
 
 <body>
     <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
-                    <img style="height:80px; margin-top: -13px;" src="/Banner image/Logo.png" alt="D-mart logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="#caps">Caps</a>
-                        <a class="nav-link" href="#">Backpack</a>
-                        <a class="nav-link" href="#">Watches</a>
-                        <a class="nav-link" href="#">Contact Us</a>
+
+        <section>
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">
+                        <img style="height:80px; margin-top: -13px;" src="/Banner image/Logo.png" alt="D-mart logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#caps">Caps</a>
+                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#">Watches</a>
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </div>
                     </div>
-                </div>
-            </nav>
-        </div>
+                </nav>
+            </div>
+
+        </section>
 
         <!-- carousel container for big items -->
+        <section>
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide header-bg" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row align-items-center">
+                                <div class="col-md-5">
+                                    <img src="/Banner image/headphone.png" class="d-block w-100" alt="headphone">
+                                </div>
 
-        <div class="container">
-            <div id="carouselExampleControls" class="carousel slide header-bg" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row align-items-center">
-                            <div class="col-md-5">
-                                <img src="/Banner image/headphone.png" class="d-block w-100" alt="headphone">
-                            </div>
+                                <div class="col-md-7">
+                                    <h2>H2031d Gaming Headphone</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                                        consectetur!lorem5
+                                    </p>
+                                    <h3 class="price">$ 240</h3>
+                                    <button class="btn btn-success active font-weight-bold">Buy Now>></button>
 
-                            <div class="col-md-7">
-                                <h2>H2031d Gaming Headphone</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur!lorem5
-                                </p>
-                                <h3 class="price">$ 240</h3>
-                                <button class="btn btn-success active font-weight-bold">Buy Now>></button>
-
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row align-items-center">
-                            <div class="col-md-5">
-                                <img src="Banner image/Monitor.jpg" class="d-block w-100" alt="Monitor">
-                            </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-md-5">
+                                    <img src="Banner image/Monitor.jpg" class="d-block w-100" alt="Monitor">
+                                </div>
 
-                            <div class="col-md-7">
-                                <h2>18.5” 193V5LSB2 LED Monitor</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur! Lorem
-                                    ipsum dolor sit amet consectetur.</p>
-                                <h3 class="price">$ 1030</h3>
-                                <button class="btn btn-success active font-weight-bold">Buy Now >></button>
+                                <div class="col-md-7">
+                                    <h2>18.5” 193V5LSB2 LED Monitor</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur!
+                                        Lorem
+                                        ipsum dolor sit amet consectetur.</p>
+                                    <h3 class="price">$ 1030</h3>
+                                    <button class="btn btn-success active font-weight-bold">Buy Now >></button>
 
-                            </div>
-
-                        </div>
-
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row align-items-center">
-                            <div class="col-md-5">
-                                <img src="Banner image/arduino.jpg" class="d-block w-100" alt="arduino">
-                            </div>
-
-                            <div class="col-md-7">
-                                <h2>Arduino Uno R3</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur! Lorem
-                                    ipsum dolor sit amet.
-                                </p>
-                                <h3 class="price">$ 95</h3>
-                                <button class="btn btn-success active font-weight-bold">Buy Now>></button>
+                                </div>
 
                             </div>
 
                         </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-md-5">
+                                    <img src="Banner image/arduino.jpg" class="d-block w-100" alt="arduino">
+                                </div>
+
+                                <div class="col-md-7">
+                                    <h2>Arduino Uno R3</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, consectetur!
+                                        Lorem
+                                        ipsum dolor sit amet.
+                                    </p>
+                                    <h3 class="price">$ 95</h3>
+                                    <button class="btn btn-success active font-weight-bold">Buy Now>></button>
+
+                                </div>
+
+                            </div>
+                        </div>
+
                     </div>
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls"
+                        data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls"
+                        data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </button>
 
-                </div>
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls"
-                    data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleControls"
-                    data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </button>
-
-            </div>
-        </div>
-
-        <!-- Caps Card -->
-
-        <div class="container categories">
-            <div class="row p-3 d-flex justify-content-between">
-                <div style="background-color: rgb(218, 146, 218);"
-                    class="col-md-4 d-flex justify-content-around align-items-center cat1">
-                    <h3 class="font-weight-bold">Caps</h3>
-                    <img src="Category images/cap.png" alt="cap">
-                </div>
-
-                <div style="background-color: lightcoral;"
-                    class="col-md-4 d-flex justify-content-around align-items-center cat2">
-                    <h3 class="font-weight-bold ">Bags</h3>
-                    <img src="Category images/backpack.png" alt="Backpack">
-                </div>
-
-                <div style="background-color: lightblue" ;
-                    class="col-md-4 d-flex justify-content-around align-items-center cat3">
-                    <h3 class="ml-3 font-weight-bold">Watch</h3>
-                    <img src="Category images/watch.png" alt="watch">
                 </div>
             </div>
-        </div>
+
+        </section>
+
+        <section>
+
+            <div class="container categories">
+                <div class="row p-3 d-flex justify-content-between">
+                    <div style="background-color: rgb(218, 146, 218);"
+                        class="col-md-4 d-flex justify-content-around align-items-center cat1">
+                        <h3 class="font-weight-bold">Caps</h3>
+                        <img src="Category images/cap.png" alt="cap">
+                    </div>
+
+                    <div style="background-color: lightcoral;"
+                        class="col-md-4 d-flex justify-content-around align-items-center cat2">
+                        <h3 class="font-weight-bold ">Bags</h3>
+                        <img src="Category images/backpack.png" alt="Backpack">
+                    </div>
+
+                    <div style="background-color: lightblue" ;
+                        class="col-md-4 d-flex justify-content-around align-items-center cat3">
+                        <h3 class="ml-3 font-weight-bold">Watch</h3>
+                        <img src="Category images/watch.png" alt="watch">
+                    </div>
+                </div>
+            </div>
 
     </header>
-
+  <!-- Caps Card -->
 
     <main>
         <div class="container" id="caps">
@@ -174,6 +184,7 @@
                 </div>
             </div>
         </div>
+        </section>
     </main>
 
     <footer>
