section and nargin

--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
                     </div>
                 </div>
             </div>
+        </section>
 
     </header>
-  <!-- Caps Card -->
+    <!-- Caps Card -->
 
     <main>
         <div class="container" id="caps">
@@ -184,7 +185,6 @@
                 </div>
             </div>
         </div>
-        </section>
     </main>
 
     <footer>
@@ -193,7 +193,7 @@
                 <h3>KEEP SHOPPING FROM THIS SHOP</h3>
                 <H6>Get updates on sales and attactive discount </H6>
                 <input type="text" class="form-control" name="" id="">
-                <button class="btn btn-success active font-weight-bold" type="submit">SUBMIT</button>
+                <button class="btn btn-success active font-weight-bold mt-2" type="submit">SUBMIT</button>
 
             </div>
         </div>
